# wakubuk

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  types.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: files.rs  main.rs
src/components/: DiskDisplay.tsx  FileTreeDisplay.tsx  FolderDisplay.tsx
src/pages/: AnalyzePage.tsx  IndexPage.tsx  index.tsx
src/tools/: parsing.ts
