[package]
name = "wakubuk"
version = "0.0.2"
description = "Tarui app to analyze your files"
authors = ["ajnart"]
license = "MIT"
repository = "https://github.com/ajnart/wakubuk"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-open", "fs-remove-dir", "fs-remove-file", "shell-execute", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.28.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
